feat: 🎸 remove typeorm & apply prisma
